addons/envs/prd/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    name: gateway

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: gateway
  annotations:
    networking.gke.io/suppress-firewall-xpn-error: "true"
spec:
  gatewayClassName: gke-l7-global-external-managed
  addresses:
  - type: NamedAddress
    value: global-static-ip
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "voteing-app.gcp.cloud"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: gateway-tls-cert
        namespace: gateway
    allowedRoutes:
      namespaces:
        from: All
